# humen-mcp

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.zh-CN.md  env.example
.agents/skills/humen-mcp/: SKILL.md
.github/workflows/: aur.yml  release.yml
crates/humen-mcp-sdk/: Cargo.toml  README.md
crates/humen-mcp-sdk/examples/: community_plugin.rs
crates/humen-mcp-sdk/src/: lib.rs
deploy/: install-arch.sh
docs/: AGENT_DEPLOY_PROMPT.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  DEPLOYMENT.md  DEPLOYMENT.zh-CN.md
examples/: README.md  README.zh-CN.md  community-release-plugin.json  mcp-accept-human-friend.json  mcp-approve.json  mcp-ask-choice.json  mcp-ask-image-base64.json  mcp-ask-judgment-async.json  mcp-ask-network-async.json  mcp-ask-text-async.json  mcp-create-from-template.json  mcp-create-task.json  mcp-feedback.json  mcp-initialize.json  mcp-judge.json  mcp-leave-memo.json  mcp-list-agent-inbox.json  mcp-list-nodes.json  mcp-list-online-humens.json  mcp-list-plugins.json  mcp-list-tags.json  mcp-list-tasks.json  mcp-rate-humen.json  mcp-read-network-ledger.json  mcp-read-replies.json  mcp-report-humen.json  mcp-request-human-friend.json  mcp-search-network.json  mcp-search-profiles.json
packaging/nginx/: humen-mcp.conf
packaging/scripts/: humen-mcp-self-update
packaging/sudoers/: humen-mcp-self-update
packaging/systemd/: humen-mcp-self-update.service  humen-mcp.service
packaging/sysusers/: humen-mcp.conf
packaging/tmpfiles/: humen-mcp.conf
scripts/: package-release.sh
src/: admin_weixin.rs  app_core.rs  auth.rs  error.rs  federation.rs  github.rs  handlers.rs  main.rs  mcp.rs  models.rs  passkeys.rs  plugins.rs  profiles.rs  self_update.rs  server.rs  storage.rs  tests.rs  utils.rs  weixin.rs  ws.rs
