[package]
name = "humen-mcp"
version = "0.1.16"
edition = "2024"
license = "MIT"
description = "Humen as an MCP tool: route agent requests to logged-in humans."
repository = "https://github.com/LIghtJUNction/humen-mcp"

[workspace]
members = [".", "crates/humen-mcp-sdk"]
resolver = "2"

[[bin]]
name = "humen-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
futures-util = "0.3"
humen-mcp-sdk = { version = "0.1.0", path = "crates/humen-mcp-sdk" }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
qrcode = "0.14"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
webauthn-rs = { version = "0.6.1-dev", default-features = false }
